# CHIMERA_VPU

./: CMakeLists.txt  README.md
Chimera_VPU/: .gitignore  .gitkeep  CMakeLists.txt  README.md
Chimera_VPU/api/: .gitkeep  vpu.cpp  vpu.h
Chimera_VPU/src/core/: .gitkeep  VPUCore.cpp  VPUCore.h
Chimera_VPU/src/hal/: .gitkeep  CPUDenseKernels.cpp  IKernel.h
Chimera_VPU/src/pillars/: .gitkeep  Cerebellum.cpp  Cerebellum.h  Cortex.cpp  Cortex.h  Feedback.cpp  Feedback.h  Orchestrator.cpp  Orchestrator.h
Chimera_VPU/tests/: .gitkeep  main.cpp
api/: vpu.h
iot_framework/: virtual_device_layer.py
project-chimera-vpu-documentation-extracted/: App.tsx  README.md  README_GENERATED.md  index.html  metadata.json  package-lock.json  package.json  types.ts
project-chimera-vpu-documentation-extracted/components/: CodeBlock.tsx  FileTree.tsx  PillarCard.tsx  Section.tsx
project-chimera-vpu-documentation-extracted/constants/: projectData.ts  projectData.tsx
src/: IoTClient.h  vpu_core.cpp  vpu_core.h  vpu_data_structures.h
src/core/: Pillar1_Synapse.cpp  Pillar1_Synapse.h  Pillar2_Cortex.cpp  Pillar2_Cortex.h  Pillar3_Orchestrator.cpp  Pillar3_Orchestrator.h  Pillar4_Cerebellum.cpp  Pillar4_Cerebellum.h  Pillar5_Feedback.cpp  Pillar5_Feedback.h  Pillar6_TaskGraphOrchestrator.cpp  Pillar6_TaskGraphOrchestrator.h
src/dgm/: dgm_agent.h  dgm_archive.cpp  dgm_archive.h  dgm_controller.cpp  dgm_controller.h  dgm_evolution.cpp  dgm_evolution.h  dgm_selection.cpp  dgm_selection.h
src/hal/: cpu_kernels.cpp  hal.h  hal_utils.cpp  hal_utils.h
tests/: dgm_loop_test.cpp  e2e_full_loop.cpp
